--- a/templates/add_selected.html
+++ b/templates/add_selected.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+
+    <title>Stationery Store</title>
 </head>
 
 <body>
+    <div = class="box1">
     <a href="/home"><button>BILL</button></a>
     <a href="/list"><button>ITEM LIST</button></a>
     <hr>
@@ -24,6 +27,7 @@
     </form>
     <hr>
     {{ total }}
+</div>
 </body>
 
 </html>
