--- a/templates/edit.html
+++ b/templates/edit.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LIST</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+
+    <title>Stationery Store</title>
 </head>
 
 <body>
+    <div class="box1">
     <a href="/home"><button>BILL</button></a> 
     <a href="/list"><button>ITEM LIST</button></a>
     <hr>
@@ -51,6 +54,7 @@
             <input type="submit" name="" id="" value="Submit">
         </form>
     </div>
+</div>
 </body>
 
 </html>
