--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,35 +1,155 @@
 body{
+  font-family:'Courier New', Courier, monospace
 }
 
 div[class="box1"] {
     height: 100% ;
-    width: 70%;
+    width: 80%;
     background-color: white;
-    margin: 0% auto;
-    border-top: 2px solid #CE2232;
-    border-right: 2px solid #219E4A;
-    border-bottom: 2px solid #0974B0;
-    border-left: 2px solid #FFE004;
+    margin: auto;
+    border-top: 5px solid #CE2232;
+    border-right: 5px solid #219E4A;
+    border-bottom: 5px solid #0974B0;
+    border-left: 5px solid #FFE004;
     padding: 10px;
   }
 
+  div[class="in-box"] {
+    margin: auto;
+    width: 60%;
+  }
+
   table, th, td{
-    border-top: 2px solid #CE2232;
-    border-right: 2px solid #219E4A;
-    border-bottom: 2px solid #0974B0;
-    border-left: 2px solid #FFE004;
+    border-top: 1px solid #CE2232;
+    border-right: 1px solid #219E4A;
+    border-bottom: 1px solid #0974B0;
+    border-left: 1px solid #FFE004;
     border-collapse: collapse;
     text-align: center;
     padding-right: 40px;
     padding-left: 40px;
   }
+
+  th{
+    padding: 25px;
+  }
   a[class="nostyle"],td[class="nostyle"]{
     border: none;
-    padding: 0%;
+    padding: 5px;
     text-decoration: none;
   }
 
   .delete-btn1{
     color: #CE2232;
     text-decoration: none;
+    font-size: 25px;
+    padding: 5px;
   }
+
+  .edit-btn1{
+    color: #0974B0;
+    text-decoration: none;
+    font-size: 25px;
+    padding: 5px;
+  }
+
+  .btn{
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: center;
+  }
+
+  .bill-btn{
+    border: 2px solid #CE2232;
+    background-color: white;
+  }
+
+  .bill-btn:active{
+    background-color: #CE2232;
+    color: white;
+  }
+
+.item-btn{
+  border: 2px solid #219E4A;
+  background-color: white;
+}
+
+.item-btn:active{
+  background-color: #219E4A;
+  color: white;
+}
+
+.add-btn{
+  background-color: white;
+  border: 2px solid #0974B0;
+}
+
+.add-btn:active{
+  background-color: #0974B0;
+  color: white;
+}
+
+.gen-btn{
+  border: 2px solid #FFE004;
+  background-color: white;
+}
+
+.gen-btn:active{
+  background-color: #FFE004;
+  color: white;
+}
+
+.submit-btn{
+  border: 2px solid #FFE004;
+  background-color: white;
+}
+
+.input-box1{
+  border: 1px solid #CE2232;
+  background-color: white;
+  height: 25px;
+}
+
+.input-box1:focus{
+  background-color: whitesmoke;
+}
+
+.input-box2{
+border: 1px solid #219E4A;
+background-color: white;
+height: 25px;
+}
+
+.input-box2:focus{
+  background-color: whitesmoke;
+}
+
+.mybox {
+  position: relative;
+  display: inline-block;
+}
+select {
+  display: inline-block;
+  height: 30px;
+  width: 150px;
+  outline: none;
+  color: #74646e;
+  border-top: 2px solid #CE2232;
+  border-right: 2px solid #219E4A;
+  border-bottom: 2px solid #0974B0;
+  border-left: 2px solid #FFE004;
+  border-radius: 5px;
+  background: white;
+}
+/* Select arrow styling */
+.mybox .myarrow {
+  width: 23px;
+  height: 28px;
+  position: absolute;
+  display: inline;
+  top: 1px;
+  right: 3px;
+  pointer-events: none;
+}
