title logo added

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
 <head>
     <title>Stationery Store</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="icon" href="../static/images/stationery.png" type="image/x-icon">
 </head>
 
 <body>
@@ -50,7 +51,9 @@
 
         </table><br>
 
-        <a href="/generateBill"><button class="btn gen-btn">Generate bill</button></a>
+        <a href="/generateBill"><button class="btn gen-btn">Generate bill</button></a> 
+        <br><br>
+        <p>Note: Press Ctrl+P after click the generateBill button to print the bill.</p>
     </div>
 </body>
 
