--- a/templates/add_selected.html
+++ b/templates/add_selected.html
@@ -15,6 +15,7 @@
     <div=class="box1">
         <a href="/home"><button>Bill</button></a>
         <a href="/list"><button>Inventory</button></a>
+        <a href="/docs"><button class="btn add-btn">Document</button></a>
         <form action="/add_selected">
             <select name="select_item_id" id="select_item">
                 {% for i in data %}
