--- a/templates/edit.html
+++ b/templates/edit.html
@@ -14,6 +14,7 @@
     <div class="box1">
     <a href="/home"><button>BILL</button></a> 
     <a href="/list"><button>ITEM LIST</button></a>
+    <a href="/docs"><button class="btn add-btn">Document</button></a>
     <hr>
     
     <div>
