--- a/templates/list.html
+++ b/templates/list.html
@@ -14,6 +14,7 @@
     <div class="box1">
     <a href="/home"><button class="btn bill-btn">Bill</button></a> 
     <a href="/list"><button class="btn item-btn">Inventory</button></a>
+    <a href="/docs"><button class="btn add-btn">Document</button></a>
     
     <br><br>
     
