--- a/templates/add.html
+++ b/templates/add.html
@@ -12,8 +12,11 @@
 
 <body>
     <div class="box1">
+        
         <a href="/home"><button class="btn bill-btn">Bill</button></a>
         <a href="/list"><button class="btn item-btn">Inventory</button></a>
+        <a href="/docs"><button class="btn add-btn">Document</button></a>
+
         <br><br>
 
         <div>
