--- a/templates/add.html
+++ b/templates/add.html
@@ -48,16 +48,16 @@
         <br>
 
         <div>
-            <a href="/add"><button class="btn add-btn">ADD</button></a>
+            <a href="/add"><button class="btn add-btn">Add</button></a>
         </div>
         <br>
 
         <div>
             <form action="/adding" method="post">
                 <label for="item_name">Item Name</label>
-                <input class="input-box1 " type="text" name="item_name" id="item_name" required>
+                <input class="input-box1 " type="text" name="item_name" id="item_name" placeholder="Enter Item name here" required>
                 <label for="item_price">Item Price</label>
-                <input class="input-box2" type="text" name="item_price" id="item_price" required>
+                <input class="input-box2" type="text" name="item_price" id="item_price" placeholder="Enter Item price here" required>
                 <input type="submit" name="" id="" value="Submit" class="btn submit-btn">
             </form>
         </div>
