--- a/templates/docs.html
+++ b/templates/docs.html
@@ -25,15 +25,15 @@
 
         <h2>Table of connent</h2>
         <ol>
-            <li>Generate Bill.</li>
-            <li>Add new Item in inventory.</li>
+            <li>How to generate bill ?</li>
+            <li>How to add, edit and delete items on Inventory ?</li>
             <li>Modify the existing data from inventory.</li>
             <li>Delete data from inventory.</li>
         </ol>
 
         <hr> 
 
-        <h4>1. Generate Bill</h4>
+        <h4>1. How to generate bill ?</h4>
         <img src="../static/images/ganerate-1.png" alt="ganerate-1" class="generate-1-img">
 
         <ol type="i" >
@@ -45,6 +45,20 @@
         </ol>
         <hr>
         
+        <h4>2. How to add, edit and delete items on Inventory?</h4>
+        <img src="../static/images/add-1.png" alt="ganerate-1" class="generate-1-img">
+
+        <ol type="i" >
+            <li>Click Inventory button.</li>
+            <li>Click Add button.</li>
+            <li>Enter Item Name.</li>
+            <li>Enter the price of the item.</li>
+            <li>Finaly click submit.</li>
+            <li>Click <span class="nostyle edit-btn1">&#9998;</span> to edit items.</li>
+            <li>Click <span class="nostyle delete-btn1">&#10006;</span> to delete items.</li>
+        </ol>
+        
+
     </div>
 </body>
 
