--- a/templates/generate.html
+++ b/templates/generate.html
@@ -70,8 +70,7 @@
             </table>
             <br>
 
-            <p>If you have any questions about this invoice,<br> please contact <a href="">iamkayarogan@gmail.com</a>
-            </p>
+            <p>If you have any questions about this invoice,<br> please contact <a href="#">iamkayarogan@gmail.com</a> </p>
         </div>
 
         <div>
