--- a/templates/docs.html
+++ b/templates/docs.html
@@ -2,9 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>Stationery Store</title>
+    <title>{{ __company }}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <link rel="icon" href="../static/images/stationery.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <style>
         .generate-1-img{
             width: 90%;
@@ -17,6 +20,7 @@
 </head>
 
 <body>
+    <h1 class="h1-1">{{ __company }}</h1>
     <div class="box1">
 
         <a href="/home"><button class="btn bill-btn">Bill</button></a>
