--- a/templates/edit.html
+++ b/templates/edit.html
@@ -7,10 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../static/images/stationery.png" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    <title>Stationery Store</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <title>{{ __company }}</title>
 </head>
 
 <body>
+    <h1 class="h1-1">{{ __company }}</h1>
+
     <div class="box1">
     <a href="/home"><button>BILL</button></a> 
     <a href="/list"><button>ITEM LIST</button></a>
