--- a/templates/generate.html
+++ b/templates/generate.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="icon" href="../static/images/stationery.png" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" />
+
     <title>Bill</title>
     <script>
         function printDiv(divName) {
@@ -32,12 +34,20 @@
             background-color: #0974B0;
             color: white;
         }
+
+        table,
+        th,
+        td {
+            padding: 10px;
+        }
+
     </style>
 
 
 </head>
 
 <body>
+
     <div class="box1">
         <div id="printableArea">
             <h1>INVOICE</h1>
@@ -70,11 +80,19 @@
             </table>
             <br>
 
-            <p>If you have any questions about this invoice,<br> please contact <a href="#">iamkayarogan@gmail.com</a> </p>
+            <p>If you have any questions about this invoice,<br> please contact <a href="#">{{ __email }}</a> </p>
         </div>
 
         <div>
             <input type="button" onclick="printDiv('printableArea')" value="Print" class="print-btn" />
+
+            <br><br>
+
+            <form action="/send_email" method="post">
+                <label for="">Customer Email </label>
+                <input type="email" name="c_email" class="input-box1">
+                <input type="submit" name="" id="" value="Send" class="item-btn">
+            </form>
         </div>
 
     </div>
