--- a/templates/home.html
+++ b/templates/home.html
@@ -2,12 +2,16 @@
 <html lang="en">
 
 <head>
-    <title>Stationery Store</title>
+    <title>{{ __company }}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <link rel="icon" href="../static/images/stationery.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <h1 class="h1-1">{{ __company }}</h1>
     <div class="box1">
         <a href="/home"><button class="btn bill-btn">Bill</button></a>
         <a href="/list"><button class="btn item-btn">Inventory</button></a>
