--- a/templates/list.html
+++ b/templates/list.html
@@ -3,10 +3,15 @@
 
 <head>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    <title>Stationery Store</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <title>{{ __company }}</title>
 </head>
 
 <body>
+    <h1 class="h1-1">{{ __company }}</h1>
+
     <div class="box1">
         <a href="/home"><button class="btn bill-btn">Bill</button></a>
         <a href="/list"><button class="btn item-btn">Inventory</button></a>
